fixed menu overflow in chrome dev tools

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
     position: sticky;
     top: 0;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .hlavicka a {
